@@ -252,4 +252,5 @@ $string['hidden']='Hidden';
 $string['previousschool']='Previous Schools';
 $string['achieved']='Achieved';
 $string['leavingreason']='Reason for leaving';
+$string['studentdeletewarning']='WARNING: Deleting a student will remove all records associated with that student. <br /> The information cannot be restored or recovered and is permanently lost. <br /> This action cannot be undone!';
 ?>
